# Mindvox

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: mindvox_mentoring_agreement.md
scripts/: audit_e02_raw_transcription.py  audit_e03_merged_result.py  benchmark_e03_models.py  fill_e03_swagger_from_vault.py  merge_e03_chunk_results.py  prepare_e03_raw_text_from_vault.py  process_e03_semantic_chunks.py  semantic_chunk_transcript.py  submit_e03_raw_text.py
src/: main.py  settings.py
src/contract/: __init__.py
src/prod/: __init__.py
src/routers/: endpoint_security.py  health.py  metadata_validation.py  processed_transcriptions.py  transcriptions.py  upload_limits.py
src/schemas/: processed_transcriptions.py  transcriptions.py
src/services/: artifact_naming.py  e03_course_context.py  e03_study_package.py  e03_vault_exporter.py  e03_vault_scaffold.py  llm_client.py  local_llm_runtime.py  postprocessing_pipeline.py  postprocessing_service.py  processed_transcription_artifacts.py  processed_transcription_queue.py  transcription_artifacts.py  transcription_service.py
tests/e01_health/: README.md  test_health.py
tests/e02_transcriptions/: README.md  test_transcriptions.py
tests/e03_processed_transcriptions/: README.md  test_artifact_naming.py  test_audit_e02_raw_transcription.py  test_audit_e03_merged_result.py  test_e03_course_context.py  test_e03_test_plan.py  test_e03_vault_export.py  test_local_llm_runtime.py  test_merge_e03_chunk_results.py  test_postprocessing_pipeline.py  test_prepare_e03_raw_text_from_vault.py  test_startup_profiles.py  (+3 more)
(+24 files in other folders)
