[project]
name = "mindvox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[project.optional-dependencies]
stt = [
    "mlx-whisper>=0.4.3 ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
