[project]
name = "mindvox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[project.optional-dependencies]
stt = [
    "mlx-whisper>=0.4.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openai-whisper>=20250625 ; sys_platform == 'linux' or sys_platform == 'win32'",
]
stt-mlx = [
    "mlx-whisper>=0.4.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
stt-cross-platform = [
    "openai-whisper>=20250625",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
